# img

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_gcc.yml  build_msvc.yml
src/: Compressor.cpp  Compressor.h  ConsoleApp.cpp  ConsoleApp.h  GUIapp.cpp  GUIapp.h  GUIappImpl.cpp  main.cpp
